<resources>
    <string name="app_name">Platanus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_image">DisplayImageActivity</string>
    <string name="title_activity_crop_image">Crop</string>
    <string name="cp_info_text">Crop</string>
    <string name="cp_image_contentDesc">Crop</string>
    <string name="cp_template_contentDesc">Content</string>
    <string name="cp_template_button">template_button</string>
    <string name="cp_crop_button">Crop</string>
    <string name="cp_change_img_contentDesc">change image content description</string>
    <string name="sd_icon_contentDesc">contentdescription</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="no_storage_card">No storage card</string>
    <string name="preparing_card">Preparant targeta</string>
    <string name="cropimage">Crop image</string>
    <string name="title_activity_intro">Platanus</string>
    <string name="prefs_category_one">Preference1</string>
    <string name="prefs_category_two">Preference2</string>
    <string name="prefs_summ_category_two">categoria2</string>
    <string name="h_value">H</string>
    <string name="pref_defaultrangeseekbar_title">Range Seek Bar Default Value</string>
    <string name="settings_tittle">Settings</string>
    <string name="inline_preferences">Preferences</string>
    <string name="title_checkbox_preference">Checkboxpreferences</string>
    <string name="summary_checkbox_preference">Checkboxpreference</string>
    <string name="dialog_based_preferences">DialogBasedPreferences</string>
    <string name="title_edittext_preference">EdittextPreference</string>
    <string name="summary_edittext_preference">Summary</string>
    <string name="dialog_title_edittext_preference">Dialog</string>
    <string name="title_list_preference">ListPreference</string>
    <string name="summary_list_preference">Summary</string>
    <string name="dialog_title_list_preference">list</string>
    <string name="launch_preferences">list</string>
    <string name="title_screen_preference">list</string>
    <string name="title_next_screen_toggle_preference">list</string>
    <string name="summary_next_screen_toggle_preference">list</string>
    <string name="title_intent_preference">list</string>
    <string name="summary_intent_preference">list</string>
    <string name="summary_screen_preference">list</string>
    <string name="preference_attributes">list</string>
    <string name="title_parent_preference">list</string>
    <string name="summary_parent_preference">list</string>
    <string name="title_child_preference">list</string>
    <string name="summary_child_preference">list</string>
    <string name="minH_preference">Min H</string>
    <string name="minHsummary_preference">Minimum value for H ue range</string>
    <string name="minHDialogTitle_preference">Min H value</string>
    <string name="maxH_preference">Max H</string>
    <string name="maxHsummary_preference">Maximum Value for Hue</string>
    <string name="maxHDialogTitle_preference">Max H</string>
    <string name="minS_preference">Min S</string>
    <string name="minSsummary_preference">Minimum Value for Saturation</string>
    <string name="minSDialogTitle_preference">Min</string>
    <string name="maxS_preference">Max S</string>
    <string name="maxSsummary_preference">Maximum Value for Saturation</string>
    <string name="maxSDialogTitle_preference">Max S</string>
    <string name="minV_preference">Min V</string>
    <string name="minVsummary_preference">Minimum Value</string>
    <string name="minVDialogTitle_preference">Min V</string>
    <string name="maxV_preference">Max Value</string>
    <string name="maxVsummary_preference">Maximum Value</string>
    <string name="maxVDialogTitle_preference">Max V</string>
    <string name="rangepreference_title">Range Default Selection Value</string>
    <string name="preferences_title">Settings</string>
</resources>
